--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Normalize.css">
-    <link rel="stylesheet" href="css/template3.css">
+    <link rel="stylesheet" href="css/Template3.css">
     <link rel="stylesheet" href="css/all.min.css">
     <!-- put your css file after Normalize and all.min to override them -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
