--- a/index.html
+++ b/index.html
@@ -24,28 +24,30 @@
                 <li><a href="#articles">Articles</a></li>
                 <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#features">Features</a></li>
-                <li>Other Links</li>
-                <div class="mega container">
-                    <div class="mega-menu">
-                        <div class="img"><img src="images/megamenu.png" alt="mega-menu"></div>
-                        <div class="lists">
-                            <ul>
-                                <li><a href="#testimonials"><i class="far fa-comments"></i>Testimonials</a></li>
-                                <li><a href="#team"><i class="far fa-user"></i>Team Members</a></li>
-                                <li><a href="#services"><i class="far fa-building"></i>Services</a></li>
-                                <li><a href="#skills"><i class="far fa-check-circle"></i>Our Skills</a></li>
-                                <li><a href="#work"><i class="far fa-clipboard"></i>How It Works</a></li>
-                            </ul>
-                            <ul>
-                                <li><i class="far fa-calendar-alt"></i><a href="#event">Events</a></li>
-                                <li><i class="fas fa-server"></i><a href="#plans">Pricing Plans</a></li>
-                                <li><i class="far fa-play-circle"></i><a href="#videos">Top Videos</a></li>
-                                <li><i class="far fa-chart-bar"></i><a href="#stats">Stats</a></li>
-                                <li><i class="fas fa-percent"></i><a href="#discount">Request A Discount</a></li>
-                            </ul>
+                <li>
+                    <a href="#">Other Links</a>
+                    <div class="mega container">
+                        <div class="mega-menu">
+                            <div class="img"><img src="images/megamenu.png" alt="mega-menu"></div>
+                            <div class="lists">
+                                <ul>
+                                    <li><a href="#testimonials"><i class="far fa-comments"></i>Testimonials</a></li>
+                                    <li><a href="#team"><i class="far fa-user"></i>Team Members</a></li>
+                                    <li><a href="#services"><i class="far fa-building"></i>Services</a></li>
+                                    <li><a href="#skills"><i class="far fa-check-circle"></i>Our Skills</a></li>
+                                    <li><a href="#work"><i class="far fa-clipboard"></i>How It Works</a></li>
+                                </ul>
+                                <ul>
+                                    <li><i class="far fa-calendar-alt"></i><a href="#event">Events</a></li>
+                                    <li><i class="fas fa-server"></i><a href="#plans">Pricing Plans</a></li>
+                                    <li><i class="far fa-play-circle"></i><a href="#videos">Top Videos</a></li>
+                                    <li><i class="far fa-chart-bar"></i><a href="#stats">Stats</a></li>
+                                    <li><i class="fas fa-percent"></i><a href="#discount">Request A Discount</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                </div>
+                </li>
             </ul>
         </nav>
     </header>
